# profiling_precision_poc

./: Cargo.toml
benches/: criterion_test1.rs
src/: bench_increment.rs  bench_no_call.rs  bench_rng.rs  lib.rs
