[package]
name = "profiling_precision_poc"
version = "0.1.0"
authors = ["onursolmaz <onursolmaz@gmail.com>"]
edition = "2018"

[[bench]]
name = "criterion_test1"
harness = false

[[bin]]
name = "bench_rng"
path = "src/bench_rng.rs"

[[bin]]
name = "bench_increment"
path = "src/bench_increment.rs"

[[bin]]
name = "bench_no_call"
path = "src/bench_no_call.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
criterion = "0.3.2"
